--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,5 @@
-<div class="jumbotron jumbotron-fluid　jumbotron-extend">
-  <div class="container">
-    <h1>毎日の出来事を記録しよう</h1>
-    <p>日記を付けたいけど、文章を書くのは面倒だと思ったことはありませんか？</p>
-    <p>Short Diaryでは短文で日記をつけることで、</p>
-    <p>少ない時間で日々の出来事を記録することができます。</p>
-    <p>Short Diaryを使って日記を付けよう！</p>
-    <div class="btn-container">
-      <div>
-        <%= link_to "アカウントを作成する",signup_path,class:"btn btn-md btn-info" %>
-      </div>
-      <p>お試しでご利用する場合は、下記のボタンをご利用ください。</p>
-      <div class="">
-        <%= link_to "ゲストとしてログイン","#",class:"btn btn-md btn-primary btn-guest" %>
-      </div>
-    </div>
-  </div>
-</div>
+<% if user_signed_in? %>
+  <%= render "user_login_home" %>
+<% else %>
+  <%= render "user_logout_home" %>
+<% end %>
