--- a/app/views/layouts/_logout_user_header.html.erb
+++ b/app/views/layouts/_logout_user_header.html.erb
@@ -1,3 +1,3 @@
 <li class="nav-item nav-item-extend">
-  <%= link_to "Login", new_user_session_path, class: "btn btn-outline-info" %>
+  <%= link_to "Login", new_user_session_path, class: "btn btn-info btn-extend" %>
 </li>
