--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container signup-container">
   <div class="row">
     <div class="col">
-      <h1 class="title-container">Account Creation</h1>
+      <h1 class="title-container">アカウント作成</h1>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
