認証メール再送信テスト完了

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,4 @@
-<p>Welcome <%= @email %>!</p>
-
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<h1>Short Diary</h1>
+<p>Short Diaryへのご登録ありがとうございます。</p>
+<p>下記の『アカウントを有効化する』から本人確認を済ませることでアカウントを利用できます。</p>
+<p><%= link_to 'アカウントを有効化する', confirmation_url(@resource, confirmation_token: @token) %></p>
