--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,7 @@ body{
 }
 
 // Signup
-.signup-container,.login-container{
+.signup-container,.login-container,.retransmission-container{
   margin-top:3rem;
   padding:3.5rem;
   background-color:white;
