--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,22 @@
-<h2>本登録用メールの再送信</h2>
+<% provide(:title, "認証メール再送信") %>
+<div class="container retransmission-container">
+  <div class="row">
+    <div class="col">
+      <h1 class="title-container">認証メール再送信</h1>
+      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="form-group">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",
+              placeholder: "登録したメールアドレス", class: "form-control",
+              value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+        <div class="form-group">
+          <%= f.submit "認証メールを再送信する", class: "btn btn-outline-info form-control form-submit" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "再度メールを送信する" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
