--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,12 +13,11 @@
 
   <div class="form-group">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード（6文字以上）", class: "form-control" %>
-    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "新しいパスワード（6文字以上）", class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード（再入力）", class: "form-control" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "新しいパスワード（再入力）", class: "form-control" %>
   </div>
 
   <div class="form-group">
