user-confirmations-controller　request_spec テスト完了

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.submit "Sign up!", class: "btn btn-outline-info form-control form-submit" %>
+          <%= f.submit "パスワードを変更する", class: "btn btn-outline-info form-control form-submit" %>
         </div>
       <% end %>
 
