ブラウザテストのグループ名変更　パスワードリセットメールの日本語化

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,3 @@
-<h1>Short Diary</h1>
-<p>Short Diaryへのご登録ありがとうございます。</p>
+<h1>Short Diaryへのご登録ありがとうございます。</h1>
 <p>下記の『アカウントを有効化する』から本人確認を済ませることでアカウントを利用できます。</p>
 <p><%= link_to 'アカウントを有効化する', confirmation_url(@resource, confirmation_token: @token) %></p>
