--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1>Short Diaryからの連絡</h1>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>パスワード変更の申請を受け付けました。</p>
+<p>パスワードを変更する場合は、下記の『アカウントを有効化する』をクリックしてパスワード変更用ページを開いて下さい。</p>
+<p>下記のページでパスワードを変更するまでパスワードは変更されません。</p>
+<p><%= link_to 'パスワードを変更する。', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>パスワードの変更を希望しない場合は、このメールを削除してください。</p>
