パスワードリセットメール 完了？

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,7 +95,8 @@ body{
 .signup-container,
 .login-container,
 .retransmission-container,
-.password-reset-container{
+.password-reset-new-container,
+.password-reset-edit-container{
   margin-top:3rem;
   padding:3.5rem;
   background-color:white;
