--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<h1>Short Diaryからの連絡</h1>
+<h1>Short Diaryからのご連絡</h1>
 
 <p>パスワード変更の申請を受け付けました。</p>
 <p>パスワードを変更する場合は、下記の『アカウントを有効化する』をクリックしてパスワード変更用ページを開いて下さい。</p>
