--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1>Short Diaryからのご連絡</h1>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>このメールが送信されたメールアドレスを利用しているアカウントは、保存された情報を保護するために現在凍結されています。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>ログインする場合は、先に下記の『アカウントの凍結を解除する』をクリックして凍結を解除してからログインしてください。</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to "アカウントの凍結を解除する", unlock_url(@resource, unlock_token: @token) %></p>
