--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div class="container-field">
+    <div class="container-fluid">
       <%= render "shared/flash" %>
       <%= yield %>
     </div>
