--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,4 +1,13 @@
-<div class="jumbotron jumbotron-fluid jumbotron-extend">
-<div class="container">
-    "Hello World"
-<div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3  micropost-form">
+      投稿フォーム
+    </div>
+    <div class="col-lg-7  micropost-index">
+      投稿リスト
+    </div>
+    <div class="col-lg-2  link-list">
+      リンク一覧
+    </div>
+  </div>
+</div>
