--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid home-container">
   <div class="row">
-    <div class="col-lg-3  micropost-form">
-      投稿フォーム
-    </div>
+    <aside class="col-lg-3  micropost-form">
+      <%= render 'shared/micropost_form' %>
+    </aside>
     <div class="col-lg-7  micropost-index">
       投稿リスト
     </div>
