--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <%= render "user_login_home" %>
+  <%= render "static_pages/user_login_home" %>
 <% else %>
-  <%= render "user_logout_home" %>
+  <%= render "static_pages/user_logout_home" %>
 <% end %>
