--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: @micropost, url: microposts_path, local: true) do |f| %>
+  <h1 class="micropost-form-title"> Form</h1>
   <%= render 'shared/error_messages', object: f.object %>
   <div><%= f.hidden_field :posted_date,value: Date.today %></div>
 
