--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,10 +1,8 @@
 <div class="container-fluid home-container">
   <div class="row">
-    <aside class="col-lg-3  micropost-form">
-      <%= render 'shared/micropost_form' %>
-    </aside>
+    <%= render 'shared/micropost_form' %>
     <div class="col-lg-7  micropost-index">
-      投稿リスト
+      <%= render 'shared/micropost_index' %>
     </div>
     <div class="col-lg-2  link-list">
       リンク一覧
