--- a/app/views/shared/_micropost_index.html.erb
+++ b/app/views/shared/_micropost_index.html.erb
@@ -3,13 +3,26 @@
   <%= paginate @microposts %>
   <ul class="microposts">
     <% @microposts.each do |micropost| %>
-      <li id ="micropost-<%= micropost.id %>">
-        <%= micropost.content %>
-        <% if micropost.user_id == current_user.id %>
-          | <%= link_to "削除", micropost_path(micropost), method: :delete,
-                                  data: { confirm: "選択した投稿を削除しますか？" } ,class: "micropost-delete-link" %>
+      <li class="row",id ="micropost-<%= micropost.id %>" >
+        <div class="col-10 micropost-date"><%= micropost.created_at.strftime("%Y年%-m月%-d日") %></div>
+        <span class= "col-2 micropost-delete">
+          <% if micropost.user_id == current_user.id %>
+            <%= link_to "削除", micropost_path(micropost), method: :delete,
+                                  data: { confirm: "選択した投稿を削除しますか？" } ,class: "btn btn-sm btn-outline-info" %>
+          <% end %>
+        </span>
+        <div class="col-12">
+          <div class="micropost-content">
+            <%= micropost.content  %>
+          </div>
+        </div>
+        <% if micropost.picture.attached?%>
+          <div class="col-12 micropost-picture">
+            <%= image_tag micropost.resize_picture,class:"d-none d-md-inline-block" %>
+          </div>
         <% end %>
       </li>
     <% end %>
   </ul>
+  <%= paginate @microposts %>
 <% end %>
