--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "認証メール再送信") %>
-<div class="container authenticationret-ransmission-container">
+<div class="container authenticationre-transmission-container">
   <div class="row">
     <div class="col">
       <h1 class="title-container">認証メール再送信</h1>
-      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%= form_with model: @user, url: user_confirmation_path, id: 'new_user', class: 'new_user', local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="form-group">
