--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,8 +3,7 @@
   <div class="row">
     <div class="col">
       <h1 class="title-container">パスワード再設定</h1>
-
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= form_with model: @user, url: user_password_path, html: { method: :put }, id: 'edit_user', class: 'edit_user', local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <%= f.hidden_field :reset_password_token %>
 
