--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col">
       <h1 class="title-container">アカウント作成</h1>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="form-group">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.submit "パスワードを変更する", class: "btn btn-outline-info form-control form-submit" %>
+          <%= f.submit "Signup!", class: "btn btn-outline-info form-control form-submit" %>
         </div>
       <% end %>
 
