--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,21 +1,21 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "アカウントをお持ちの方はこちら", new_session_path(resource_name) %><br />
+  <%= link_to "アカウントをお持ちの方はこちら", new_user_session_path %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "アカウントが無い方はこちら", new_registration_path(resource_name) %><br />
+  <%= link_to "アカウントが無い方はこちら", new_user_registration_path %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "パスワードを忘れた方はこちら", new_password_path(resource_name) %><br />
+  <%= link_to "パスワードを忘れた方はこちら", new_user_password_path %><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "再度認証メールを送信する方はこちら", new_confirmation_path(resource_name) %><br />
+  <%= link_to "再度認証メールを送信する方はこちら", new_user_confirmation_path %><br />
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "再度凍結解除メールを送信する方はこちら", new_unlock_path(resource_name) %><br />
+  <%= link_to "再度凍結解除メールを送信する方はこちら", new_user_unlock_path %><br />
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
