--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col">
       <h1 class="title-container">アカウント凍結解除メール再送信</h1>
-      <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+      <%= form_with model: @user, url: user_unlock_path, id: 'new_user', class: 'new_user', local: true do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
