--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,6 @@ body{
  background-image: image-url("background.jpg");
  padding-top: 4.22875rem;
 }
-
 .container-fluid{
   padding:0;
 }
@@ -44,7 +43,6 @@ body{
 
 .nav-item-extend{
   .btn-extend{
-    margin-left: 1rem;
     float: right;
     margin-top: 0.6rem;
     font-size: 1.43rem;
@@ -140,13 +138,16 @@ body{
   border-color: red;
 }
 
-// shared/_micropost-form
+
+// staticpages/home
 .home-container{
   background-color: white;
+  padding-left: 1rem;
 }
 
+// shared/_micropost-form
 .micropost-form{
-  padding: 1.5rem 0 0 2rem;
+  padding-top: 1.5rem;
   .micropost-form-title{
     font-family:cursive,Century;
   }
@@ -163,14 +164,13 @@ body{
 .micropost-index{
   padding-top: 1.5rem;
   .micropost-index-title{
-    padding-left: 1.8rem;
     margin-bottom:2rem;
     font-family:cursive,Century;
   }
   .microposts{
     list-style: none;
     text-align: left;
-    li{
+    .micropost{
       overflow: auto;
       padding: 0.65rem 0;
       border: 0.065rem solid darkturquoise;
@@ -194,6 +194,13 @@ body{
 
 .link-list{
   padding-top: 1.5rem;
+  .link-list-title{
+    margin-bottom:2rem;
+    font-family:cursive,Century;
+  }
+  .link{
+    width:9rem;
+  }
 }
 
 // Pagination
