--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,7 +99,8 @@ body{
 .authenticationre-transmission-container,
 .password-reset-new-container,
 .password-reset-edit-container,
-.unlock-container{
+.unlock-container,
+.user-edit-container{
   margin-top:3rem;
   padding:3.5rem;
   background-color:white;
@@ -138,8 +139,22 @@ body{
   border-color: red;
 }
 
+// devise/registrations/_user_delete
+  .user-delete-container{
+    width:40%;
+    margin-top:5rem;
+    padding:2rem;
+    background-color:white;
+    border: 0.3rem solid red;
+    border-radius: 1rem;
+    text-align: center;
+    h3{
+      margin-bottom:2rem;
+      letter-spacing: 0.15rem;
+    }
+  }
 
-// staticpages/home
+// staticpages/home　ログイン時
 .home-container{
   background-color: white;
   padding-left: 1rem;
@@ -192,6 +207,7 @@ body{
   }
 }
 
+// shared/_link_list
 .link-list{
   padding-top: 1.5rem;
   .link-list-title{
