--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,42 @@
 <% provide(:title, "登録情報編集") %>
-<div class="container signup-container">
+<div class="container user-edit-container">
   <div class="row">
     <div class="col">
       <h1 class="title-container">登録情報編集</h1>
       <%= form_with model: @user, url: user_registration_path, html: { method: :put }, id: 'edit_user', class: 'edit_user', local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="form-group">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス（例：email@example.com）", class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :email %> <i>変更する場合は新しいメールアドレスを入力してください。</i>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "新しいメールアドレス（例：email@example.com）", class: "form-control" %>
+        </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>先にこちらのメールアドレスに送信されたメールから本人確認をしてください: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.label :password %> <i>空白の場合パスワードは変更されません</i><br />
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: "新しいパスワード（6文字以上）", class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "新しいパスワード（再入力）", class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :current_password %> <i>登録情報を変更する場合は現在使用中のパスワードを入力してください</i><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "使用中のパスワード", class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "登録情報を変更する", class: "btn btn-outline-info btn-lg  form-control form-submit" %>
+        </div>
       <% end %>
 
-      <div class="form-group">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "新しいパスワード（6文字以上）", class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "新しいパスワード（再入力）", class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "current-password" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit "この内容に変更する", class: "btn btn-outline-info btn-lg form-control" %>
-      </div>
-    <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+      <%= link_to "戻る", :back %>
     </div>
   </div>
 </div>
+
+<%= render "devise/registrations/user_delete" %>
