--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1>Short Diaryからお知らせ</h1>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>登録されたアカウントのパスワードが変更されました。</p>
