ゲストログイン機能完成

--- a/app/views/static_pages/_user_logout_home.html.erb
+++ b/app/views/static_pages/_user_logout_home.html.erb
@@ -11,7 +11,7 @@
       </div>
       <p>お試しでご利用する場合は、下記のボタンをご利用ください。</p>
       <div class="">
-        <%= link_to "ゲストとしてログイン","#",class:"btn btn-md btn-primary btn-guest" %>
+        <%= link_to "ゲストとしてログイン",users_guest_sign_in_path, method: :post ,class:"btn btn-md btn-primary btn-guest" %>
       </div>
     </div>
   </div>
