--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,13 +1,11 @@
-<div class="container-fluid home-container">
-  <div class="row">
-    <div class="col-lg-3  micropost-form">
-      <%= render 'shared/micropost_form' %>
-    </div>
-    <div class="col-lg-7  micropost-index">
-      <%= render 'shared/micropost_index' %>
-    </div>
-    <div class="col-lg-2  link-list">
-      <%= render 'shared/link_list' %>
-    </div>
+<div class="row home-container">
+  <div class="col-lg-3  micropost-form">
+    <%= render 'shared/micropost_form' %>
+  </div>
+  <div class="col-lg-7  micropost-index">
+    <%= render 'shared/micropost_index' %>
+  </div>
+  <div class="col-lg-2  link-list">
+    <%= render 'shared/link_list' %>
   </div>
 </div>
