--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@ body{
 // header
 .navbar-extend {
   margin-bottom: 0;
-  background-color: azure;
+  background-color: darkturquoise;
   ul li a button {
     padding: 0.375rem 1.5rem;
   }
@@ -17,10 +17,10 @@ body{
 
 .navbar-brand{
   font-size: 1.43rem;
-  background-color:white;
+  background-color: white;
   padding: 0.28rem 0.92rem 0.42rem 0.92rem;
   margin: 0.14rem;
-  border:0.01rem darkturquoise solid;
+  border: 0.01rem darkturquoise solid;
   border-radius: 0.63rem;
   letter-spacing: 0.07rem;
 }
@@ -36,16 +36,41 @@ body{
     letter-spacing: 0.07rem;
   }
 }
+/* footer */
+
+footer {
+  border-top: 0.065rem solid mediumturquoise;
+  padding-top: 1rem;
+  height: 4.5rem;
+  background-color: darkturquoise;
+  ul {
+    float: right;
+    list-style: none;
+    padding-right: 1rem;
+    a {
+      float: left;
+      font-size: 1rem;
+      background-color: white;
+      padding: 0.5rem 0.9rem;
+      border: 0.01rem darkturquoise solid;
+      border-radius: 0.63rem;
+      letter-spacing: 0.07rem;
+      &:hover{
+        text-decoration: none;
+      }
+    }
+  }
+}
 
 // headerとfooter以外共通
 .remove-all-margin-padding{
-  margin:0 ! important;
-  padding:0 ! important;
+  margin: 0! important;
+  padding: 0! important;
 }
 
 // Alert
  .alert{
-   margin:1.5rem 0;
+   margin: 1.5rem 0;
    text-align: center;
    padding: 1.3rem 0;
  }
@@ -65,9 +90,10 @@ body{
   background-image: image-url("note.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  margin-bottom: 0;
   .container {
     h1,p {
-      color:black;
+      color: black;
       margin-bottom: 0.75rem;
       opacity: 0.8;
     }
@@ -91,14 +117,15 @@ body{
 .password-reset-edit-container,
 .unlock-container,
 .user-edit-container{
-  margin-top:3rem;
-  padding:3.5rem;
-  background-color:white;
-  border: 0.63rem solid skyblue;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  padding: 3.5rem;
+  background-color: white;
+  border: 0.63rem double skyblue;
   border-radius: 4.4rem;
   text-align: center;
   .title-container{
-    color:lightskyblue;
+    color: lightskyblue;
     letter-spacing: 0.15rem;
   }
 }
@@ -108,10 +135,10 @@ body{
   margin-top: 1.8rem;
 }
 .form-group{
-  padding:0.4rem 0;
+  padding: 0.4rem 0;
 }
 .form-submit{
-  font-size:1.2rem;
+  font-size: 1.2rem;
 }
 
 // Formエラー表示
@@ -122,7 +149,7 @@ body{
     display: inline-block;
     text-align: left;
     color: red;
-    padding:1rem 0;
+    padding: 1rem 0;
   }
 }
 .field_with_errors .form-control {
@@ -131,15 +158,16 @@ body{
 
 // devise/registrations/_user_delete
   .user-delete-container{
-    width:40%;
-    margin-top:5rem;
-    padding:2rem;
-    background-color:white;
+    width: 40%;
+    margin-top: 5rem;
+    margin-bottom: 4rem;
+    padding: 2rem;
+    background-color: white;
     border: 0.3rem solid red;
     border-radius: 1rem;
     text-align: center;
     h3{
-      margin-bottom:2rem;
+      margin-bottom: 2rem;
       letter-spacing: 0.15rem;
     }
   }
@@ -148,21 +176,22 @@ body{
 .home-container{
   background-color: white;
   padding-left: 1rem;
-  margin:0 ! important;
+  padding-bottom: 4rem;
+  margin: 0 ! important;
 }
 
 // shared/_micropost-form
 .micropost-form{
   padding-top: 1.5rem;
   .micropost-form-title{
-    font-family:cursive,Century;
+    font-family: cursive,Century;
   }
   .content-form{
     height: 7rem;
   }
   .image-form{
-    height:auto;
-    margin:0.4rem 0;
+    height: auto;
+    margin: 0.4rem 0;
   }
 }
 
@@ -170,8 +199,8 @@ body{
 .micropost-index{
   padding-top: 1.5rem;
   .micropost-index-title{
-    margin-bottom:2rem;
-    font-family:cursive,Century;
+    margin-bottom: 2rem;
+    font-family: cursive,Century;
   }
   .microposts{
     list-style: none;
@@ -181,7 +210,7 @@ body{
       padding: 0.65rem 0;
       border: 0.065rem solid darkturquoise;
       .micropost-date{
-        font-family:cursive,Century;
+        font-family: cursive,Century;
       }
       .micropost-delete{
         text-align: right;
@@ -190,7 +219,7 @@ body{
         white-space: pre-line;
       }
       .micropost-picture{
-        padding-top:0.7rem;
+        padding-top: 0.7rem;
         text-align: center;
       }
     }
@@ -201,11 +230,11 @@ body{
 .link-list{
   padding-top: 1.5rem;
   .link-list-title{
-    margin-bottom:2rem;
-    font-family:cursive,Century;
+    margin-bottom: 2rem;
+    font-family: cursive,Century;
   }
   .link{
-    width:9rem;
+    width: 9rem;
   }
 }
 
@@ -214,15 +243,15 @@ body{
   justify-content: center;
   .page-item {
     &.active .page-link{
-      background:darkturquoise;
+      background: darkturquoise;
    }
    .page-link{
-     border:none;
-     margin:0 0.04rem;
+     border: none;
+     margin: 0 0.04rem;
      border-radius: 10%;
      &:hover{
-       color:black;
-       background:darkturquoise;
+       color: black;
+       background: darkturquoise;
      }
    }
  }
