--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <%= render "shared/flash" %>
       <%= yield %>
     </div>
+    <%= render "layouts/footer" %>
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
