--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,7 +26,7 @@
 
         <div class="form-group">
           <%= f.label :current_password %> <i>登録情報を変更する場合は現在使用中のパスワードを入力してください</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "使用中のパスワード", class: "form-control" %>
+          <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "現在使用中のパスワード", class: "form-control" %>
         </div>
 
         <div class="form-group">
