--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= render "layouts/rails_default" %>
     <%= render "layouts/shim" %>
+    <%= render "layouts/rails_default" %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <%= render "layouts/header" %>
