--- a/app/views/static_pages/_user_logout_home.html.erb
+++ b/app/views/static_pages/_user_logout_home.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid jumbotron-extend ">
+<div class="jumbotron jumbotron-fluid jumbotron-extend mb-0">
   <div class="container">
     <h1>毎日の出来事を記録しよう</h1>
     <p>日記を付けたいけど、文章を書くのは面倒だと思ったことはありませんか？</p>
