微妙に修正

--- a/app/views/layouts/_login_user_header.html.erb
+++ b/app/views/layouts/_login_user_header.html.erb
@@ -1,3 +1,3 @@
-<li class="nav-item nav-item-extend">
-  <%= link_to "Logout", destroy_user_session_path, method: :delete,class: "btn btn-light btn-extend" %>
+<li class='nav-item nav-item-extend'>
+  <%= link_to 'Logout', destroy_user_session_path, method: :delete,class: 'btn btn-light btn-extend' %>
 </li>
