--- a/app/views/shared/_link_list.html.erb
+++ b/app/views/shared/_link_list.html.erb
@@ -1,4 +1,4 @@
-<h1 class="link-list-title">Links</h1>
-  <div class="link">
-    <%= link_to "登録情報編集", edit_user_registration_path ,class:"btn btn-info link" %>
+<h1 class='link-list-title'>Links</h1>
+  <div class='link'>
+    <%= link_to '登録情報編集', edit_user_registration_path ,class:'btn btn-info link' %>
   </div>
