--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,11 +1,11 @@
-<div class="row home-container">
-  <div class="col-lg-3  micropost-form">
+<div class='row home-container'>
+  <div class='col-lg-3  micropost-form'>
     <%= render 'shared/micropost_form' %>
   </div>
-  <div class="col-lg-7  micropost-index">
+  <div class='col-lg-7  micropost-index'>
     <%= render 'shared/micropost_index' %>
   </div>
-  <div class="col-lg-2  link-list">
+  <div class='col-lg-2  link-list'>
     <%= render 'shared/link_list' %>
   </div>
 </div>
