--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,22 +1,22 @@
-<% provide(:title, "認証メール再送信") %>
-<div class="container authenticationre-transmission-container">
-  <div class="row">
-    <div class="col">
-      <h1 class="title-container">認証メール再送信</h1>
+<% provide(:title, '認証メール再送信') %>
+<div class='container authenticationre-transmission-container'>
+  <div class='row'>
+    <div class='col'>
+      <h1 class='title-container'>認証メール再送信</h1>
       <%= form_with model: @user, url: user_confirmation_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= render 'devise/shared/error_messages', resource: resource %>
 
-        <div class="form-group">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email",
-              placeholder: "登録したメールアドレス", class: "form-control",
+        <div class='form-group'>
+          <%= f.email_field :email, autofocus: true, autocomplete: 'email',
+              placeholder: '登録したメールアドレス', class: 'form-control',
               value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
         </div>
 
-        <div class="form-group">
-          <%= f.submit "認証メールを再送信する", class: "btn btn-outline-info form-control form-submit" %>
+        <div class='form-group'>
+          <%= f.submit '認証メールを再送信する', class: 'btn btn-outline-info form-control form-submit' %>
         </div>
       <% end %>
-      <%= render "devise/shared/links" %>
+      <%= render 'devise/shared/links' %>
     </div>
   </div>
 </div>
