--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -4,4 +4,4 @@
 
 <p>ログインする場合は、先に下記の『アカウントの凍結を解除する』をクリックして凍結を解除してからログインしてください。</p>
 
-<p><%= link_to "アカウントの凍結を解除する", unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'アカウントの凍結を解除する', unlock_url(@resource, unlock_token: @token) %></p>
