--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,26 +1,26 @@
-<% provide(:title, "パスワード変更") %>
-<div class="container password-reset-edit-container">
-  <div class="row">
-    <div class="col">
-      <h1 class="title-container">パスワード再設定</h1>
+<% provide(:title, 'パスワード変更') %>
+<div class='container password-reset-edit-container'>
+  <div class='row'>
+    <div class='col'>
+      <h1 class='title-container'>パスワード再設定</h1>
       <%= form_with model: @user, url: user_password_path, html: { method: :put }, id: 'edit_user', class: 'edit_user', local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= render 'devise/shared/error_messages', resource: resource %>
         <%= f.hidden_field :reset_password_token %>
 
-        <div class="form-group">
-          <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード（6文字以上）", class: "form-control" %>
+        <div class='form-group'>
+          <%= f.password_field :password, autocomplete: 'new-password', placeholder: 'パスワード（6文字以上）', class: 'form-control' %>
         </div>
 
-        <div class="form-group">
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード（再入力）", class: "form-control" %>
+        <div class='form-group'>
+          <%= f.password_field :password_confirmation, autocomplete: 'new-password', placeholder: 'パスワード（再入力）', class: 'form-control' %>
         </div>
 
-        <div class="form-group">
-          <%= f.submit "パスワードを変更する", class: "btn btn-outline-info form-control form-submit" %>
+        <div class='form-group'>
+          <%= f.submit 'パスワードを変更する', class: 'btn btn-outline-info form-control form-submit' %>
         </div>
       <% end %>
 
-      <%= render "devise/shared/links" %>
+      <%= render 'devise/shared/links' %>
     </div>
   </div>
 </div>
