--- a/app/views/devise/registrations/_user_delete.html.erb
+++ b/app/views/devise/registrations/_user_delete.html.erb
@@ -1,7 +1,7 @@
-<div class="container user-delete-container">
+<div class='container user-delete-container'>
   <h3>アカウント削除</h3>
 
-  <p><%= button_to "Delete Account", user_registration_path, data: { confirm: "アカウントを削除してもよろしいですか？（投稿内容も全て削除されます）" }, method: :delete ,class:"btn btn-outline-danger"%></p>
+  <p><%= button_to 'Delete Account', user_registration_path, data: { confirm: 'アカウントを削除してもよろしいですか？（投稿内容も全て削除されます）' }, method: :delete ,class:'btn btn-outline-danger'%></p>
 
-  <%= link_to "戻る", :back %>
+  <%= link_to '戻る', :back %>
 </div>
