--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <div class="alert alert-danger">
+  <div id='error_explanation'>
+    <div class='alert alert-danger'>
       <%= resource.errors.count %>個のエラーがあります。
     </div>
     <ul>
