--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,17 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= render "layouts/shim" %>
-    <%= render "layouts/rails_default" %>
+    <%= render 'layouts/shim' %>
+    <%= render 'layouts/rails_default' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <div class="container-fluid remove-all-margin-padding">
-      <%= render "shared/flash" %>
+    <%= render 'layouts/header' %>
+    <div class='container-fluid remove-all-margin-padding'>
+      <%= render 'shared/flash' %>
       <%= yield %>
     </div>
-    <%= render "layouts/footer" %>
+    <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
