--- a/app/views/static_pages/_user_logout_home.html.erb
+++ b/app/views/static_pages/_user_logout_home.html.erb
@@ -1,16 +1,16 @@
-<div class="jumbotron jumbotron-fluid jumbotron-extend mb-0">
-  <div class="container">
+<div class='jumbotron jumbotron-fluid jumbotron-extend mb-0'>
+  <div class='container'>
     <h1>毎日の出来事を記録しよう</h1>
     <p>日記を付けたいけど、文章を書くのは面倒だと思ったことはありませんか？</p>
     <p>Short Diaryでは短文で日記をつけることで、</p>
     <p>少ない時間で日々の出来事を記録することができます。</p>
     <p>Short Diaryを使って日記を付けよう！</p>
-    <div class="btn-container">
+    <div class='btn-container'>
       <div>
-        <%= link_to "アカウントを作成する",new_user_registration_path,class:"btn btn-md btn-info" %>
+        <%= link_to 'アカウントを作成する',new_user_registration_path,class:'btn btn-md btn-info' %>
       </div>
       <p>お試しでご利用する場合は、下記のボタンをご利用ください。</p>
-      <%= link_to "ゲストとしてログイン",users_guest_sign_in_path, method: :post ,class:"btn btn-md btn-primary btn-guest" %>
+      <%= link_to 'ゲストとしてログイン',users_guest_sign_in_path, method: :post ,class:'btn btn-md btn-primary btn-guest' %>
     </div>
   </div>
 </div>
