--- a/app/views/static_pages/_user_logout_home.html.erb
+++ b/app/views/static_pages/_user_logout_home.html.erb
@@ -2,8 +2,8 @@
   <div class='container'>
     <h1>毎日の出来事を記録しよう</h1>
     <p>日記を付けたいけど、文章を書くのは面倒だと思ったことはありませんか？</p>
-    <p>Short Diaryでは短文で日記をつけることで、</p>
-    <p>少ない時間で日々の出来事を記録することができます。</p>
+    <p>Short Diaryでは日々の日記を一言二言以内で書くことで、</p>
+    <p>少ない時間で日々の出来事についての日記をつけることができます。</p>
     <p>Short Diaryを使って日記を付けよう！</p>
     <div class='btn-container'>
       <div>
