rack-mini-profiler追加 お気に入り機能追加 ブラウザテスト未完

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, '認証メール再送信') %>
-<div class='container authenticationre-transmission-container'>
+<div class='container container-extend'>
   <div class='row'>
     <div class='col'>
       <h1 class='title-container'>認証メール再送信</h1>
