--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'パスワード再設定') %>
-<div class='container password-reset-new-container'>
+<div class='container container-extend'>
   <div class='row'>
     <div class='col'>
       <h1 class='title-container'>パスワード再設定</h1>
