--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'アカウント作成') %>
-<div class='container signup-container'>
+<div class='container container-extend'>
   <div class='row'>
     <div class='col'>
       <h1 class='title-container'>アカウント作成</h1>
