--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'アカウント凍結解除メール再送信') %>
-<div class='container unlock-container'>
+<div class='container container-extend'>
   <div class='row'>
     <div class='col'>
       <h1 class='title-container'>アカウント凍結解除メール再送信</h1>
