--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -1,9 +1,9 @@
 <div class='row home-container'>
   <div class='col-lg-3  micropost-form'>
-    <%= render 'shared/micropost_form' %>
+    <%= render 'microposts/form' %>
   </div>
   <div class='col-lg-7  micropost-index'>
-    <%= render 'shared/micropost_index' %>
+    <%= render 'microposts/index' %>
   </div>
   <div class='col-lg-2  link-list'>
     <%= render 'shared/link_list' %>
