--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,6 @@ body {
 .navbar-extend {
   margin-bottom: 0;
   background-color: darkturquoise;
-
   ul li a button {
     padding: 0.375rem 1.5rem;
   }
@@ -43,12 +42,10 @@ footer {
   padding-top: 1rem;
   height: 4.5rem;
   background-color: darkturquoise;
-
   ul {
     float: right;
     list-style: none;
     padding-right: 1rem;
-
     a {
       float: left;
       font-size: 1rem;
@@ -57,7 +54,6 @@ footer {
       border: 0.01rem darkturquoise solid;
       border-radius: 0.63rem;
       letter-spacing: 0.07rem;
-
       &:hover {
         text-decoration: none;
       }
@@ -95,21 +91,17 @@ footer {
   background-repeat: no-repeat;
 
   .container {
-
     h1,
     p {
       color: black;
       margin-bottom: 0.75rem;
       opacity: 0.8;
     }
-
     h1 {
       margin-bottom: 1.5rem;
     }
-
     .btn-container {
       margin-top: 2rem;
-
       p {
         margin-top: 1rem;
       }
@@ -118,13 +110,7 @@ footer {
 }
 
 // Formがある画面
-.signup-container,
-.login-container,
-.authenticationre-transmission-container,
-.password-reset-new-container,
-.password-reset-edit-container,
-.unlock-container,
-.user-edit-container {
+.container-extend {
   margin-top: 3rem;
   margin-bottom: 4rem;
   padding: 3.5rem;
@@ -132,7 +118,6 @@ footer {
   border: 0.63rem double skyblue;
   border-radius: 4.4rem;
   text-align: center;
-
   .title-container {
     color: lightskyblue;
     letter-spacing: 0.15rem;
@@ -156,7 +141,6 @@ footer {
 #error_explanation {
   text-align: center;
   color: red;
-
   ul {
     display: inline-block;
     text-align: left;
@@ -179,7 +163,6 @@ footer {
   border: 0.3rem solid red;
   border-radius: 1rem;
   text-align: center;
-
   h3 {
     margin-bottom: 2rem;
     letter-spacing: 0.15rem;
@@ -197,15 +180,12 @@ footer {
 // shared/_micropost-form
 .micropost-form {
   padding-top: 1.5rem;
-
   .micropost-form-title {
     font-family: cursive, Century;
   }
-
   .content-form {
     height: 7rem;
   }
-
   .image-form {
     height: auto;
     margin: 0.4rem 0;
@@ -215,7 +195,6 @@ footer {
 // shared/_micropost-index
 .micropost-index {
   padding-top: 1.5rem;
-
   .micropost-index-title {
     margin-bottom: 2rem;
     font-family: cursive, Century;
@@ -224,24 +203,19 @@ footer {
   .microposts {
     list-style: none;
     text-align: left;
-
     .micropost {
       overflow: auto;
       padding: 0.65rem 0;
       border: 0.065rem solid darkturquoise;
-
       .micropost-date {
         font-family: cursive, Century;
       }
-
       .micropost-delete {
         text-align: right;
       }
-
       .micropost-content {
         white-space: pre-line;
       }
-
       .micropost-picture {
         padding-top: 0.7rem;
         text-align: center;
@@ -253,12 +227,10 @@ footer {
 // shared/_link_list
 .link-list {
   padding-top: 1.5rem;
-
   .link-list-title {
     margin-bottom: 2rem;
     font-family: cursive, Century;
   }
-
   .link {
     width: 9rem;
   }
@@ -268,17 +240,13 @@ footer {
 .search {
   text-align: center;
   padding: 1.5rem 0;
-
   .text-field {
     width: 55%;
-
   }
-
   .search-submit {
     background-color: darkturquoise;
     color: white;
     border: 0.14rem solid skyblue;
-
     &:hover {
       background: skyblue;
     }
@@ -288,18 +256,15 @@ footer {
 // Pagination機能
 .pagination {
   justify-content: center;
-
   .page-item {
     &.active .page-link {
       background: darkturquoise;
     }
-
     .page-link {
       border: none;
       margin: 0 0.04rem;
       border-radius: 10%;
       margin-left: 0.4rem;
-
       &:hover {
         color: white;
         background: darkturquoise;
