--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, '登録情報編集') %>
-<div class='container user-edit-container'>
+<div class='container container-extend'>
   <div class='row'>
     <div class='col'>
       <h1 class='title-container'>登録情報編集</h1>
