--- a/app/views/shared/_link_list.html.erb
+++ b/app/views/shared/_link_list.html.erb
@@ -1,4 +1,7 @@
 <h1 class='link-list-title'>Links</h1>
-  <div class='link'>
+  <div>
     <%= link_to '登録情報編集', edit_user_registration_path ,class:'btn btn-info link' %>
+  </div>
+  <div>
+    <%= link_to 'お気に入り一覧', '#' ,class:'btn btn-success link' %>
   </div>
