--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,4 +1,4 @@
-<li class='row micropost',id ="micropost-<%= micropost.id %>" >
+<li class='row micropost'>
   <span class='col-5 micropost-date'>
     <%= micropost.created_at.strftime('%Y年%-m月%-d日') %>
   </span>
