--- a/app/views/microposts/create.js.erb
+++ b/app/views/microposts/create.js.erb
@@ -1,3 +1,3 @@
-$("#micropost_<%= @micropost.id %>").html("<%= j(render partial: 'microposts/micropost',micropost: @micropost)%>")；
+$("#microposts-index).html("<%= j(render partial: 'microposts/micropost',micropost: @micropost)%>")；
 $("#micropost_content").val("");
 $("#micropost_picture").val("");
