--- a/app/views/static_pages/_user_login_home.html.erb
+++ b/app/views/static_pages/_user_login_home.html.erb
@@ -2,7 +2,7 @@
   <div class='col-lg-3  micropost-form'>
     <%= render 'microposts/form' %>
   </div>
-  <div class='col-lg-7  micropost-index'>
+  <div class='col-lg-7  micropost-index', id='microposts-index'>
     <%= render 'microposts/index' %>
   </div>
   <div class='col-lg-2  link-list'>
