レイアウト修正 その他微修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,7 +307,7 @@ footer {
     letter-spacing: 0.15rem;
   }
   .fav_microposts {
-    margin: 2rem 3rem;
+    margin: auto;
     padding-left:0;
     list-style: none;
     .fav_micropost {
