--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,12 +1,12 @@
-<% provide(:title, 'お気にり入り一覧') %>
+<% provide(:title, 'お気に入り一覧') %>
 <div class='row favorite-index-container'>
   <div class='col-lg-10'>
-    <h1 class='title-container'>お気にり入り一覧</h1>
+    <h1 class='title-container'>お気に入り一覧</h1>
     <% if @fav_microposts.any? %>
       <ul class='fav_microposts'>
          <%= render partial: 'favorites/favorite_microposts', locals:{ fav_microposts: @fav_microposts } %>
       </ul>
-      <%== pagy_bootstrap_nav(@pagy) if  @pagy.vars[:count] > 20 %>
+      <%== pagy_bootstrap_nav(@pagy) if  @pagy.vars[:count] > 15 %>
     <% end %>
   </div>
   <div class='col-lg-2 link-list'>
